syntax = 'proto3';

package jobservice;

message JobServiceRequest {
    string job_id = 1;
    string job_set_id = 2;
    string queue = 3;
}

message JobServiceResponse {
    string state = 1;
    string error = 2;
}

service JobService {
    rpc GetJobStatus (JobServiceRequest) returns (JobServiceResponse) {
    }
}